<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/backarrow_imgae"
            android:src="@drawable/left_arrow" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F8838080" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/measureStart"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:text="@string/measurestart"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/measureStop"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:text="@string/measurestop"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@string/window_image"
        android:src="@drawable/window" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/close"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="@string/close"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/stop"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="@string/stop"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/open"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="@string/open"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>