<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/location_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/location_image"
            android:src="@drawable/location"
            android:textColor="#070707" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="#070707"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        android:layout_width="match_parent"
        android:id="@+id/layout2"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/stroke"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/weather_image"
            android:src="@drawable/weather" />


        <TextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="#070707"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:text="44" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        app:layout_constraintTop_toBottomOf="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/stroke"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/blank"/>

            <TextView
                android:id="@+id/inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/inside"
                android:textColor="#070707"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/outside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/outside"
                android:textColor="#070707"

                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dust_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/dust_image"
                android:src="@drawable/dust" />

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/inside_dust1_text"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:text="미세먼지"
                        android:textColor="#070707"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/inside_dust1_state"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:textColor="#070707"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="좋음" />

                    <TextView
                        android:id="@+id/inside_dust1_value"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:textColor="#070707"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="10㎍/㎥" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="match_parent"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/inside_dust2_text"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:text="초미세먼지"
                        android:textColor="#070707"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/inside_dust2_state"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:textColor="#070707"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="좋음" />

                    <TextView
                        android:id="@+id/inside_dust2_value"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:textColor="#070707"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="10㎍/㎥" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/outside_dust1_text"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:text="미세먼지"
                        android:textColor="#070707"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/outside_dust1_state"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:textColor="#070707"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="좋음" />

                    <TextView
                        android:id="@+id/outside_dust1_value"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:textColor="#070707"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="10㎍/㎥" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/outside_dust2_text"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:text="초미세먼지"
                        android:textColor="#070707"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/outside_dust2_state"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:textColor="#070707"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="좋음" />

                    <TextView
                        android:id="@+id/outside_dust2_value"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:gravity="center"
                        android:textColor="#070707"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="10㎍/㎥" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:contentDescription="@string/co2_image"

                android:src="@drawable/co2" />

            <TextView
                android:id="@+id/inside_co2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="430ppm"
                android:textColor="#070707"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/outside_co2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="430ppm"
                android:textColor="#070707"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout

        android:id="@+id/layout4"
        app:layout_constraintTop_toBottomOf="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/stroke"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pdlcimage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/pdlc_image"
            android:src="@drawable/pdlc"


            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/pdlcswitch"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/pdlcswitch"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:text="@string/pdlc_onoff"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textStyle="bold"


            android:gravity="center"

            app:layout_constraintVertical_weight="1"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout5"
        app:layout_constraintTop_toBottomOf="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="2dp"
        android:background="@drawable/stroke"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/automode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/window_auto_mode"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/manualmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/window_manual_mode"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/layout6"
        app:layout_constraintTop_toBottomOf="@+id/layout5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/gray"
        android:text="자료출처 : 환경부/한국환경공단\n 제공하는 자료는 “인증을 받지 않은 실시간자료”이므로 자료 오류 및 표출방식에 따라 값이 다를 수 있음"
        android:textColor="@color/white"
        android:textSize="10sp" />


</androidx.constraintlayout.widget.ConstraintLayout>